# Time-Series-Class

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
src/: main.py  time_Series_class.py
src/modules/: data_preparation.py  models.py
