[tool.poetry]
name = "Time Series Class"
version = "1.1.1"
description = ""
authors = ["Jeremy Vachier"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
tensorflow-macos = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
