[project]
name = "time-series-class"
version = "1.3.1"
description = "Time Series Analysis Project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Jeremy Vachier"}]
keywords = ["time-series", "machine-learning", "tensorflow", "forecasting"]

dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "scikit-learn>=1.5.0",
    "tensorflow-macos>=2.17.0",
    "datetime>=5.4",
    "statsmodels>=0.14.1",
    "scikit-optimize>=0.9.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.3",
    "black>=24.3.0",
    "ruff>=0.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
